# sark_grids_rs

./: Cargo.toml
src/: bit_grid.rs  grid.rs  lib.rs  pivot.rs  point.rs  size.rs
src/geometry/: grid_circle.rs  grid_cone.rs  grid_diamond.rs  grid_line.rs  grid_rect.rs
